<?xml version="1.0" encoding="UTF-8"?>
<!--suppress ALL -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.koala</groupId>
    <artifactId>tools</artifactId>
    <version>${revision}</version>
    <name>tools</name>
    <description>tools</description>
    <properties>
        <revision>2.1.0.6</revision>
        <java.version>21</java.version>
        <kotlin.version>2.4.0</kotlin.version>
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <pagehelper.version>4.1.0</pagehelper.version>
        <mysql.version>9.7.0</mysql.version>
        <gson.version>2.14.0</gson.version>
        <rocketmq-spring.version>2.3.6</rocketmq-spring.version>
        <javassist.version>3.30.2-GA</javassist.version>
        <lz4-java.version>1.10.1</lz4-java.version>
        <commons-beanutils.version>1.11.0</commons-beanutils.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <guava.version>33.6.0-jre</guava.version>
        <fastjson2.version>2.0.62</fastjson2.version>
        <fastjson2-extension-spring6.version>2.0.61</fastjson2-extension-spring6.version>
        <bouncycastle.version>1.84</bouncycastle.version>
        <xerces.version>2.12.2</xerces.version>
        <hutool.version>5.8.46</hutool.version>
        <spring-boot-admin.version>4.1.0</spring-boot-admin.version>
        <commons-collections4.version>4.5.0</commons-collections4.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
    </dependencies>

    <packaging>pom</packaging>

    <modules>
        <module>tools-base</module>
        <module>tools-data</module>
        <module>tools-service</module>
        <module>tools-factory</module>
        <module>tools-web</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>tools-web</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>tools-base</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>tools-data</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>tools-factory</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.koala</groupId>
                <artifactId>tools-service</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.rocketmq</groupId>
                <artifactId>rocketmq-spring-boot-starter</artifactId>
                <version>${rocketmq-spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>${javassist.version}</version>
            </dependency>
            <dependency>
                <groupId>at.yawk.lz4</groupId>
                <artifactId>lz4-java</artifactId>
                <version>${lz4-java.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${commons-beanutils.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2-extension</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2-extension-spring6</artifactId>
                <version>${fastjson2-extension-spring6.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcpkix-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>xerces</groupId>
                <artifactId>xercesImpl</artifactId>
                <version>${xerces.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>de.codecentric</groupId>
                <artifactId>spring-boot-admin-starter-client</artifactId>
                <version>${spring-boot-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <!-- 用于替换 application.yml 中的变量 -->
                <mvn.profile.active>dev</mvn.profile.active>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>tools-base</module>
                <module>tools-data</module>
                <module>tools-service</module>
                <module>tools-factory</module>
                <module>tools-web</module>
            </modules>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <mvn.profile.active>prod</mvn.profile.active>
            </properties>
            <modules>
                <module>tools-base</module>
                <module>tools-data</module>
                <module>tools-service</module>
                <module>tools-factory</module>
                <module>tools-web</module>
            </modules>
        </profile>
        <profile>
            <id>docker</id>
            <properties>
                <mvn.profile.active>docker</mvn.profile.active>
            </properties>
            <modules>
                <module>tools-base</module>
                <module>tools-data</module>
                <module>tools-service</module>
                <module>tools-factory</module>
                <module>tools-web</module>
            </modules>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.5</version>
                <configuration>
                    <skipTests>true</skipTests>    <!--默认关掉单元测试 -->
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
